plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.6'
	id 'io.spring.dependency-management' version '1.1.7'
	id "org.sonarqube" version "7.3.0.8198"
}

configurations {
    all {
        // 프로젝트 전체에서 Oracle XML 파서 강제 제외
        exclude group: 'com.oracle.database.xml', module: 'xmlparserv2'
    }
}

group = 'com.bnk'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

test {
    exclude '**/AiChatMock*'
    exclude '**/AiChatEvaluationTest*'
}

// ── Spring 6+ @PathVariable / @CookieValue / @RequestParam 파라미터 이름 인식 ──
tasks.withType(JavaCompile).configureEach {
	options.compilerArgs += ['-parameters']
}

repositories {
	mavenCentral()
	maven { url 'https://repo.spring.io/milestone' }
}

ext {
	set('springAiVersion', "2.0.0-M6")
}

dependencies {
	// ── Test ──────────────────────────────────────────────
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation("com.h2database:h2:2.4.240")
	testImplementation 'org.springframework.boot:spring-boot-starter-security'  // security-test 포함
	testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:4.0.1'
	testCompileOnly         'org.projectlombok:lombok'
	testAnnotationProcessor 'org.projectlombok:lombok'
	testRuntimeOnly         'org.junit.platform:junit-platform-launcher'

	// ── Spring Boot Core ──────────────────────────────────
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	// ── logable ──────────────────────────────────
	implementation 'org.aspectj:aspectjweaver:1.9.22'

	// ── JDBC (명시적 버전 고정 — Spring Boot BOM 버전과 다를 경우 충돌 방지) ──
	implementation("org.springframework.boot:spring-boot-starter-jdbc:4.1.0-RC1")

	// ── Redis ────────────────────────────────────────────
	// MemoryTokenStore → RedisTokenStore 전환
	// 이메일 인증 토큰 / 비밀번호 재설정 토큰 TTL 관리
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'

	// ── GenAI ────────────────────────────────────────────
	//implementation("org.springframework.ai:spring-ai-starter-model-ollama:2.0.0-M7")
	implementation 'org.springframework.ai:spring-ai-starter-model-google-genai'
	implementation 'org.springframework.ai:spring-ai-starter-model-google-genai-embedding'

	// ── MyBatis ──────────────────────────────────────────
	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:4.0.1'

	// ── JWT ──────────────────────────────────────────────
	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
	runtimeOnly    'io.jsonwebtoken:jjwt-impl:0.12.6'
	runtimeOnly    'io.jsonwebtoken:jjwt-jackson:0.12.6'

	// ── AI / Vector Store ────────────────────────────────
	implementation platform('org.springframework.ai:spring-ai-bom:2.0.0-M6')
	implementation 'org.springframework.ai:spring-ai-starter-vector-store-qdrant'

	// ── DB Driver ────────────────────────────────────────
	runtimeOnly('com.oracle.database.jdbc:ojdbc11-production:23.3.0.23.09') {
		// MyBatis XML 파싱 충돌을 일으키는 Oracle XML 파서 제외
		exclude group: 'com.oracle.database.xml', module: 'xmlparserv2'
	}

	// ── Oracle OCI SDK (Object Storage) ──────────────────
	implementation 'com.oracle.oci.sdk:oci-java-sdk-objectstorage:3.42.0'
	implementation 'com.oracle.oci.sdk:oci-java-sdk-common:3.42.0'
	implementation 'com.oracle.oci.sdk:oci-java-sdk-common-httpclient-jersey3:3.42.0'

	// ── Lombok ───────────────────────────────────────────
	compileOnly           'org.projectlombok:lombok'
	annotationProcessor   'org.projectlombok:lombok'

	// ── Apache PDFBox (PDF → 이미지 변환) ─────────────────
	implementation 'org.apache.pdfbox:pdfbox:3.0.3'
	implementation 'org.apache.pdfbox:pdfbox-io:3.0.3'
}

dependencyManagement {
	imports {
		mavenBom "org.springframework.ai:spring-ai-bom:${springAiVersion}"
	}
}

tasks.named('test') {
	useJUnitPlatform()
}